<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_320sdp"
        android:layout_height="@dimen/_350sdp"
        android:src="@drawable/home_img"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_74sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        app:chipSpacingHorizontal="@dimen/_24sdp"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView">


        <ImageButton
            android:id="@+id/button"
            android:layout_width="@dimen/_49sdp"
            android:layout_height="@dimen/_49sdp"
            android:background="@drawable/home_bottom_bg"
            android:src="@drawable/ic_flights"

            />

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="@dimen/_49sdp"
            android:layout_height="@dimen/_49sdp"
            android:background="@drawable/home_bottom_bg"
            android:src="@drawable/ic_hotels"

            />

        <ImageButton
            android:id="@+id/button2"
            android:layout_width="@dimen/_49sdp"
            android:layout_height="@dimen/_49sdp"
            android:background="@drawable/home_bottom_bg"
            android:src="@drawable/ic_cars"

            />

        <ImageButton
            android:id="@+id/button3"
            android:layout_width="@dimen/_49sdp"
            android:layout_height="@dimen/_49sdp"
            android:background="@drawable/home_bottom_bg"
            android:src="@drawable/ic_taxi"

            />

        <TextView
            android:id="@+id/textView"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/flights"
            style="@style/home_bottom_text_style" />

        <TextView
            android:id="@+id/textView2"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/hotels"
            style="@style/home_bottom_text_style" />

        <TextView
            android:id="@+id/textView3"
            android:layout_marginStart="@dimen/_22sdp"
            android:text="@string/cars"
            style="@style/home_bottom_text_style"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_marginStart="@dimen/_28sdp"
            android:text="@string/taxi"
            style="@style/home_bottom_text_style"/>
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:text="@string/deals"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_19sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/source_sans_pro"
        android:textStyle="bold"
        android:textColor="@color/tab_layout_title"
        android:gravity="bottom"
        android:textSize="@dimen/_13ssp"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_42sdp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:tabIndicatorColor="@color/item_back"
        app:tabIndicatorFullWidth="false"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/item_back"
        app:tabTextAppearance="@style/tab_layout_text_style"
        app:tabTextColor="@color/tab_layout_color">


    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_s_your_nnext_destination"
        android:textSize="@dimen/_24ssp"
        android:fontFamily="@font/source_sans_pro"
        android:textStyle="bold"
        android:textColor="@color/home_button_text_color"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_94sdp"
        android:layout_marginTop="@dimen/_181sdp"
        android:layout_marginBottom="@dimen/_110sdp"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"/>


</androidx.constraintlayout.widget.ConstraintLayout>