<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.trip.tablayout.trips.tripadd.TripAddDetailFragment">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/TripimgDetail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_340sdp"
            android:layout_marginTop="-60dp"
            app:shapeAppearanceOverlay="@style/roundImageViewProduct"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            />

        <TextView
            android:id="@+id/trip_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_23sdp"
            android:fontFamily="@font/montserrat"
            android:textAllCaps="false"
            android:textColor="@color/detail_textview_color1"
            android:textSize="@dimen/_21ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TripimgDetail" />

        <TextView
            android:id="@+id/trip_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_29sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:fontFamily="@font/montserrat"
            android:textAllCaps="false"
            android:textColor="@color/detail_textview_color2"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trip_title" />



        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:srcCompat="@drawable/ic_location_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trip_title"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/like_icon"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_23sdp"
            app:srcCompat="@drawable/ic_like_icon"
            android:background="@drawable/like_icon_bg_rounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/TripimgDetail"/>

        <Button
            android:id="@+id/AddTripBottom"
            style="@style/DetailAddButtonStyle"
            android:layout_width="@dimen/_237sdp"
            android:layout_height="@dimen/_41sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_113sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:text="@string/add_trips"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDate2"
            app:shapeAppearanceOverlay="@style/DetailAddButtonStyle" />

        <TextView
            android:id="@+id/textViewDate1"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_150sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            app:layout_constraintEnd_toStartOf="@id/textViewDate2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TripimgDetail" />

        <TextView
            android:id="@+id/textViewDate2"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_150sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewDate1"
            app:layout_constraintTop_toBottomOf="@id/TripimgDetail" />

        <Button
            android:id="@+id/AddDate1Bottom"
            style="@style/DetailAddButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_41sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_90sdp"
            android:text="@string/travel_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/AddDate2Bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDate1"
            app:shapeAppearanceOverlay="@style/DetailAddButtonStyle" />

        <Button
            android:id="@+id/AddDate2Bottom"
            style="@style/DetailAddButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_41sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_90sdp"
            android:text="@string/travel_end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/AddDate1Bottom"
            app:layout_constraintTop_toBottomOf="@+id/textViewDate2"
            app:shapeAppearanceOverlay="@style/DetailAddButtonStyle" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>